Enum user_role {
  customer
  admin
  kitchen
}

Enum membership_tier {
  standard
  silver
  gold
}

Enum order_status {
  Received
  Preparing
  ReadyForDispatch
  Delivering
  Delivered
  DeliveryFailed
  Cancelled
}

Table users {
  user_id int [pk, increment]
  full_name varchar(100) [not null]
  phone_number varchar(15) [not null, unique]
  password_hash varchar(255)
  address varchar(255)
  role user_role [not null, default: 'customer']
  current_points int [not null, default: 0]
  total_points_earned int [not null, default: 0]
  membership_tier membership_tier [not null, default: 'standard']
}

Table categories {
  category_id int [pk, increment]
  name varchar(50) [not null]
  description text
  sort_order int [not null, default: 0]
  is_active boolean [not null, default: true]
}

Table products {
  product_id int [pk, increment]
  category_id int [not null, ref: > categories.category_id]
  name varchar(100) [not null]
  base_price_vnd int [not null]
  is_pizza boolean [not null, default: false]
  image_url varchar(255)
  is_active boolean [not null, default: true]
}

Enum option_select_type {
  single
  multi
}

Table option_groups {
  group_id int [pk, increment]
  name varchar(100) [not null, unique]
  select_type option_select_type [not null, default: 'multi']
  required boolean [not null, default: false]
  sort_order int [not null, default: 0]
}

Table options {
  option_id int [pk, increment]
  group_id int [not null, ref: > option_groups.group_id]
  name varchar(100) [not null]
  description varchar(255)
  price_delta_vnd int [not null, default: 0]
  sort_order int [not null, default: 0]

  indexes {
    (group_id, name) [unique]
  }
}

Table product_options {
  product_id int [pk, ref: > products.product_id]
  option_id int [pk, ref: > options.option_id]
}

Table combos {
  combo_id int [pk, increment]
  name varchar(100) [not null]
  description text
  combo_price_vnd int [not null]
  target_group int
  validity_start datetime
  validity_end datetime

  Note: 'CHECK validity_range: validity_start IS NULL OR validity_end IS NULL OR validity_start <= validity_end'
}

Table combo_items {
  combo_item_id int [pk, increment]
  combo_id int [not null, ref: > combos.combo_id]
  product_id int [not null, ref: > products.product_id]
  quantity int [not null, default: 1]
}

Table orders {
  order_id int [pk, increment]
  order_code varchar(26) [not null, unique]
  user_id int [ref: > users.user_id]
  recipient_name varchar(100) [not null]
  recipient_phone varchar(15) [not null]
  delivery_address varchar(255) [not null]
  delivery_ward varchar(100)
  delivery_note varchar(255)
  total_amount_vnd int [not null]
  delivery_fee_vnd int [not null, default: 22000]
  payment_method varchar(20) [not null, default: 'COD']
  current_status order_status [not null, default: 'Received']
  promised_at datetime [not null]
  delivery_reference varchar(64)
  created_at datetime [not null]
}

Table order_items {
  order_item_id int [pk, increment]
  order_id int [not null, ref: > orders.order_id]
  product_id int [ref: > products.product_id]
  combo_id int [ref: > combos.combo_id]
  quantity int [not null, default: 1]
  unit_price_vnd int [not null]
  parent_order_item_id int [ref: > order_items.order_item_id]
  notes varchar(255)

  Note: 'Exactly one of product_id or combo_id must be non-null. Combo lines: parent row (combo_id) + child rows per pick (product_id, parent_order_item_id).'
}

Table order_item_options {
  id int [pk, increment]
  order_item_id int [not null, ref: > order_items.order_item_id]
  group_name varchar(100) [not null]
  option_name varchar(100) [not null]
  price_delta_vnd int [not null]
}

Table order_tracking {
  tracking_id int [pk, increment]
  order_id int [not null, ref: > orders.order_id]
  updated_by int [ref: > users.user_id]
  status order_status [not null]
  created_at datetime [not null]
  note varchar(255)
}

Table carts {
  cart_id int [pk, increment]
  user_id int [ref: > users.user_id, unique]
  created_at datetime [not null]
  touched_at datetime [not null]

  Note: 'Server cart (U5). Guest carts: user_id null; session claim cart_id.'
}

Table cart_lines {
  line_id int [pk, increment]
  cart_id int [not null, ref: > carts.cart_id]
  payload json [not null]
  quantity int [not null, default: 1]
  note varchar(255)
  created_at datetime [not null]

  Note: 'payload = canonical QuoteLineIn union minus quantity.'
}

Table kitchen_queue_view {
  order_id int
  order_code varchar(26)
  current_status order_status
  created_at datetime
  promised_at datetime
  priority_score int

  Note: 'SQL view defined in Alembic migration; read model for kitchen queue ordering.'
}
